<resources>
    <string name="app_name" translatable="false">Noted</string>
    <string name="url_termos" translatable="false">https://deyvidandrades.github.io/Noted/termos/</string>

    <string name="acao_de_adicionar_uma_anotacao">Ação de adicionar uma anotação</string>
    <string name="salvar">Salvar</string>
    <string name="faca_uma_anotacao">Faça uma anotação</string>
    <string name="escolha_uma_categoria_opcional">Escolha uma categoria (opcional)</string>
    <string name="salvar_e_fechar">Salvar e fechar</string>
    <string name="termos_e_condicoes">Termos e condições</string>
    <string name="proteger_anotacoes_com_senha">Proteger anotações com senha</string>
    <string name="dark_mode" translatable="false">Dark mode</string>
    <string name="aceitar_e_continuar">Aceitar e continuar</string>
    <string name="leia_nossos">Leia nossos</string>
    <string name="clicando_em_continuar">Clicando em continuar, você está aceitando nossos termos e condições</string>
    <string name="person_adding_notes">Pessoa adicionando anotações</string>
    <string name="salve_suas_anotacoes">Salve suas anotações</string>
    <string name="seja_bem_vindo">Seja bem vindo!</string>
    <string name="ilustracao_de_autenticacao">Ilustração de autenticação</string>
    <string name="o_proprietario_solicitou">O proprietário solicitou que o acesso seja controlado com senha.</string>
    <string name="autenticacao_necessaria">Autenticação necessária</string>
    <string name="image_of_a_padlock">Imagem de um cadeado</string>
    <string name="falha_ao_autenticar">Falha ao autenticar</string>
    <string name="autenticacao">Autenticação</string>
    <string name="para_acessar_as_anotacoes">Para acessar as anotações a autenticação é necessária.</string>
    <string name="cancelar">Cancelar</string>
    <string name="anotacoes_e_caracteres">%1$s anotações e %2$s caracteres.</string>
    <string name="default_">Padrão</string>
    <string name="item_removido">Item removido</string>
    <string name="categorias">Categorias</string>
    <string name="anotacoes">Anotações</string>
    <string name="settings">Configurações</string>
</resources>