<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AuthActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:contentDescription="@string/image_of_a_padlock"
            android:src="@drawable/rounded_lock_24" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:text="@string/autenticacao_necessaria"
            android:textSize="32sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/o_proprietario_solicitou"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:contentDescription="@string/ilustracao_de_autenticacao"
            android:src="@drawable/undraw_fingerprint_login_re_t71l" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_autenticar"
        style="@style/Widget.Material3.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="32dp"
        android:text="@string/salvar_e_fechar" />
</RelativeLayout>