<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.FirstTimeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/li_info_holder"
        android:orientation="vertical"
        android:padding="24dp">

        <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/rounded_edit_note_24" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/seja_bem_vindo"
            android:textSize="32sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="24sp"
            android:text="@string/salve_suas_anotacoes"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/person_adding_notes"
            android:src="@drawable/undraw_add_notes_re_ln36" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/li_info_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginVertical="16dp"
                android:background="@drawable/rounded_r16_outline"
                android:drawablePadding="8dp"
                android:padding="16dp"
                android:text="@string/clicando_em_continuar"
                android:textAlignment="center"
                android:textSize="12sp"
                app:drawableTint="?android:colorAccent"
                app:drawableTopCompat="@drawable/rounded_info_24" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingVertical="16dp"
                    android:text="@string/leia_nossos"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_termos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:paddingVertical="16dp"
                    android:text="@string/termos_e_condicoes"
                    android:textColor="?android:colorAccent"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btn_continuar"
            style="@style/Widget.Material3.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="32sp"
            android:text="@string/aceitar_e_continuar"
            app:icon="@drawable/rounded_check_circle_24" />
    </LinearLayout>
</RelativeLayout>